--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
+roberta_fakenews_model/model.safetensors filter=lfs diff=lfs merge=lfs -text
 Set/*.csv filter=lfs diff=lfs merge=lfs -text
 *.safetensors filter=lfs diff=lfs merge=lfs -text
